# tapster

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 20250613055837_init.down.sql  20250613055837_init.up.sql  20250616053905_insert_units.up.sql
src/: auth.rs  error.rs  lib.rs  main.rs
src/handlers/: bar.rs  ingredient.rs  media.rs  misc.rs  mod.rs  user.rs
src/model/: bar.rs  ingredient.rs  media.rs  mod.rs  unit.rs  user.rs
